<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@android:drawable/stat_sys_data_bluetooth"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_jig"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_jig" />
        <item
            android:id="@+id/nav_monitoring"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_monitoring" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>