<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.adsemicon.navdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_connect"
        android:name="com.adsemicon.navdrawer.ui.connect.ConnectFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_connect" />

    <fragment
        android:id="@+id/nav_jig"
        android:name="com.adsemicon.navdrawer.ui.jig.JigFragment"
        android:label="@string/menu_jig"
        tools:layout="@layout/fragment_jig" />

<!--    Fragment 추가 시 아래 <fragment/> 추가 필요-->

    <fragment
        android:id="@+id/nav_monitoring"
        android:name="com.adsemicon.navdrawer.ui.monitoring.MonitoringFragment"
        android:label="@string/menu_monitoring"
        tools:layout="@layout/fragment_monitoring" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.adsemicon.navdrawer.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

</navigation>